--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -5,7 +5,7 @@ permissions:
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * * *'
   #[workflow_call]
   push:
     branches: [ "main" ]
