--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Configure Environment
       run: |
-        P="$(ls -d bash-*/)"
+        P="$(ls -d bash_*/)"
         echo "P=$P"                           >> $GITHUB_ENV
         [[ -d "$P" ]]
         #echo 'DEBEMAIL=InnovAnon-Inc@gmx.com' >> $GITHUB_ENV
