--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -39,8 +39,6 @@ jobs:
 
     - name: Configure Environment
       run: |
-        # TODO
-        ls -ltra
         P="$(ls -d bash-*/)"
         echo "P=$P"                           >> $GITHUB_ENV
         [[ -d "$P" ]]
@@ -60,7 +58,8 @@ jobs:
     - name: Run dch
       working-directory: ${{ env.P }}
       run: |
-        dch -n back-syslog --nmu
+        dch -n back-syslog
+        #dch -n back-syslog --nmu
 
     - name: Configure GPG Key
       run: |
