--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -28,14 +28,14 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: ${{ steps.tag_version.outputs.new_tag }}
-        fail_on_unmatched_files: true
-        generate_release_notes: true
-        files: |
-          repo/dist/*
+    #- name: Release
+    #  uses: softprops/action-gh-release@v1
+    #  with:
+    #    tag_name: ${{ steps.tag_version.outputs.new_tag }}
+    #    fail_on_unmatched_files: true
+    #    generate_release_notes: true
+    #    files: |
+    #      repo/dist/*
 
     # TODO new image
     - name: Authenticate with Docker Hub
