--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,17 @@ services:
     image:           innovanon/msfrpcd
     container_name:  msfrpcd
     ports:
-      - "0.0.0.0:55553:55553"
+      - "0.0.0.0:55553:55553/tcp"
     command: ["-S", "-U", $MSFRPC_USERNAME, "-P", $MSFRPC_PASSWORD]
     volumes:
       - msfrpcd:/usr/share/metasploit-framework/config:rw
       - syslog-client:/etc/rsyslog.d:ro
     restart:         always
+    healthcheck:
+      test: ["CMD-SHELL", "wget -nv -O/dev/null http://0.0.0.0:55553/api"]
+      interval:      1m
+      timeout:       5s
+      retries:       10
     depends_on:
       postgres:
         condition:   service_healthy
