--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     restart:         always
     healthcheck:
       test: ["CMD-SHELL", "wget -nv -O/dev/null http://0.0.0.0:55553/api"]
-      interval:      1m
+      interval:     10s
       timeout:       5s
       retries:       10
     depends_on:
