--- a/.github/workflows/pkgrel.yml
+++ b/.github/workflows/pkgrel.yml
@@ -72,6 +72,7 @@ jobs:
         GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
 
     - name: Sign Installation Package
+      working-directory: "repo"
       run: |
         gpg --yes --detach-sig Dockerfile
         gpg --yes --detach-sig docker-compose.yaml
@@ -83,5 +84,5 @@ jobs:
         fail_on_unmatched_files: true
         generate_release_notes: true
         files: |
-          *
+          repo/*
 
